# PaperForge

./: .gitignore  __init__.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  paperforge.py  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  cli_app.py  cli_interface.py  cli_launcher.py  main_cli.py
docs/: TAVILY_SETUP.md
paperforge_lab/papers/2/: 2.html
paperforge_lab/papers/3/: 3.md  code_implementation_report.txt  implement_code_summary.md  initial_plan.txt
paperforge_lab/papers/4/: 4.md  code_implementation_report.txt  implement_code_summary.md  initial_plan.txt
paperforge_lab/papers/4/generate_code/medivision_reproduction/: README.md  requirements.txt
paperforge_lab/papers/chat_project_1764732151/: chat_project_1764732151.md  code_implementation_report.txt  implement_code_summary.md  initial_plan.txt
paperforge_lab/papers/chat_project_1764732151/generate_code/snake_game/: README.md  config.py  food.py  game.py  snake.py
paperforge_lab/papers/chat_project_1764736812/: chat_project_1764736812.md  code_implementation_report.txt  implement_code_summary.md  initial_plan.txt
prompts/: code_prompts.py
tools/: git_command.py  tavily_search_server.py
ui/: __init__.py  app.py  components.py  handlers.py  layout.py  streamlit_app.py  styles.py
utils/: file_processor.py
workflows/: agent_orchestration_engine.py  code_implementation_workflow.py  code_implementation_workflow_index.py  codebase_index_workflow.py
workflows/agents/: memory_agent_concise.py  memory_agent_concise_index.py  memory_agent_concise_multi.py
(+20 files in other folders)
